[gd_scene load_steps=14 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Levels/Door.gd" type="Script" id=2]
[ext_resource path="res://Assets/Door.png" type="Texture" id=3]
[ext_resource path="res://Enemies/C_Vamp.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemies/Enemies.gd" type="Script" id=5]
[ext_resource path="res://UI/Camera.gd" type="Script" id=6]
[ext_resource path="res://Combat/Combat.gd" type="Script" id=7]
[ext_resource path="res://Player/C_Player.gd" type="Script" id=8]
[ext_resource path="res://Levels/Tileset.tres" type="TileSet" id=9]
[ext_resource path="res://UI/Pause_Menu.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/Music_Sounds/Untitled_score.mp3" type="AudioStream" id=11]
[ext_resource path="res://UI/UI.tscn" type="PackedScene" id=12]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 17.5, 30.5 )

[node name="Game" type="Node2D"]

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 2000.0
margin_bottom = 1000.0
color = Color( 0.0235294, 0.0196078, 0.117647, 1 )

[node name="Background" type="TileMap" parent="."]
tile_set = ExtResource( 9 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( -131067, 7, 0, -131066, 7, 0, -131065, 7, 0, -131064, 7, 0, -131063, 7, 0, -131062, 7, 0, -131061, 7, 0, -131060, 7, 0, -131059, 7, 0, -131058, 7, 0, -131057, 7, 0, -131056, 7, 0, -65531, 7, 0, -65530, 7, 0, -65529, 7, 0, -65528, 7, 0, -65527, 7, 0, -65526, 7, 0, -65525, 7, 0, -65524, 7, 0, -65523, 7, 0, -65522, 7, 0, -65521, 7, 0, -65520, 7, 0, 5, 7, 0, 6, 7, 0, 7, 7, 0, 8, 7, 0, 9, 7, 0, 10, 7, 0, 11, 7, 0, 12, 7, 0, 13, 7, 0, 14, 7, 0, 15, 7, 0, 16, 7, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0 )

[node name="LevelMap" type="TileMap" parent="."]
tile_set = ExtResource( 9 )
collision_layer = 3
collision_mask = 3
format = 1
tile_data = PoolIntArray( -131072, 7, 0, -131071, 7, 0, -131070, 7, 0, -131069, 7, 0, -131068, 7, 0, -131067, 7, 0, -131066, 7, 0, -131065, 7, 0, -131064, 7, 0, -131063, 7, 0, -131062, 7, 0, -131061, 7, 0, -131060, 7, 0, -131059, 7, 0, -131058, 7, 0, -65536, 7, 0, -65535, 7, 0, -65534, 7, 0, -65533, 7, 0, -65532, 7, 0, -65531, 7, 0, -65530, 7, 0, -65529, 7, 0, -65528, 7, 0, -65527, 7, 0, -65526, 7, 0, -65525, 7, 0, -65524, 7, 0, -65523, 7, 0, -65522, 7, 0, 0, 7, 0, 1, 7, 0, 2, 7, 0, 3, 7, 0, 4, 7, 0, 5, 7, 0, 6, 7, 0, 7, 7, 0, 8, 7, 0, 9, 7, 0, 10, 7, 0, 11, 7, 0, 12, 7, 0, 13, 7, 0, 14, 7, 0, 15, 7, 0, 16, 7, 0, 17, 7, 0, 18, 7, 0, 65536, 8, 0, 65551, 6, 0, 65552, 7, 0, 65553, 7, 0, 65554, 7, 0, 131072, 8, 0, 131087, 6, 0, 131088, 7, 0, 131089, 7, 0, 131090, 7, 0, 196608, 8, 0, 196623, 6, 0, 196624, 7, 0, 196625, 7, 0, 196626, 7, 0, 262144, 8, 0, 262159, 6, 0, 262160, 7, 0, 262161, 7, 0, 262162, 7, 0, 327680, 8, 0, 327695, 6, 0, 327696, 7, 0, 327697, 7, 0, 327698, 7, 0, 393216, 8, 0, 393231, 6, 0, 393232, 7, 0, 393233, 7, 0, 393234, 7, 0, 458752, 8, 0, 458767, 6, 0, 458768, 7, 0, 458769, 7, 0, 458770, 7, 0, 524288, 8, 0, 524303, 6, 0, 524304, 7, 0, 524305, 7, 0, 524306, 7, 0, 589824, 7, 0, 589825, 7, 0, 589826, 7, 0, 589827, 7, 0, 589828, 7, 0, 589829, 7, 0, 589830, 7, 0, 589831, 7, 0, 589832, 7, 0, 589833, 7, 0, 589834, 7, 0, 589835, 7, 0, 589836, 7, 0, 589837, 7, 0, 589838, 7, 0, 589839, 7, 0, 589840, 7, 0, 589841, 7, 0, 589842, 7, 0 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="Enemies" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Door_5_to_4" type="Area2D" parent="."]
position = Vector2( 126, 499 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Door_5_to_4"]
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door_5_to_4"]
position = Vector2( 0.5, 0.5 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Combat" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 7 )

[node name="Background" type="ColorRect" parent="Combat"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0392157, 0.0392157, 0.392157, 1 )

[node name="Player_Action_Area" type="ColorRect" parent="Combat"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -768.0
color = Color( 0.392157, 0.392157, 0.392157, 1 )

[node name="Fight1" type="Button" parent="Combat/Player_Action_Area"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -200.0
margin_right = 80.0
margin_bottom = -160.0
text = "Fight"

[node name="Defend1" type="Button" parent="Combat/Player_Action_Area"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -130.0
margin_right = 80.0
margin_bottom = -90.0
text = "Defend"

[node name="Item1" type="Button" parent="Combat/Player_Action_Area"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -60.0
margin_right = 80.0
margin_bottom = -20.0
text = "Item"

[node name="Info1" type="Button" parent="Combat/Player_Action_Area"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = 10.0
margin_right = 80.0
margin_bottom = 50.0
text = "Info"

[node name="Info_Wall" type="ColorRect" parent="Combat/Player_Action_Area"]
visible = false
margin_left = 30.0
margin_top = 80.0
margin_right = 230.0
margin_bottom = 290.0
color = Color( 0.196078, 0.196078, 0.196078, 1 )

[node name="Information" type="Label" parent="Combat/Player_Action_Area/Info_Wall"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -164.0
align = 1
valign = 1

[node name="Player_Fight_Area" type="ColorRect" parent="Combat"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -768.0
color = Color( 0.392157, 0.392157, 0.392157, 1 )

[node name="Attack_A" type="Button" parent="Combat/Player_Fight_Area"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -200.0
margin_right = 80.0
margin_bottom = -160.0
text = "Critical Strike"

[node name="Attack_B" type="Button" parent="Combat/Player_Fight_Area"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -130.0
margin_right = 80.0
margin_bottom = -90.0
text = "Reckless Strike"

[node name="Attack_C" type="Button" parent="Combat/Player_Fight_Area"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -60.0
margin_right = 80.0
margin_bottom = -20.0
text = "Stunning Strike"

[node name="Back" type="Button" parent="Combat/Player_Fight_Area"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = 10.0
margin_right = 80.0
margin_bottom = 50.0
text = "Back"

[node name="C_Player_Container" type="Node2D" parent="Combat"]

[node name="C_Player" type="Sprite" parent="Combat/C_Player_Container"]
script = ExtResource( 8 )

[node name="C_Enemy_Container" type="Node2D" parent="Combat"]

[node name="C_Vamp" parent="Combat/C_Enemy_Container" instance=ExtResource( 4 )]

[node name="ConfirmBlock" type="ColorRect" parent="Combat"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -60.0
margin_right = 150.0
margin_bottom = 60.0
color = Color( 0.392157, 0.392157, 0.392157, 1 )

[node name="ActionText" type="Label" parent="Combat/ConfirmBlock"]
anchor_right = 1.0
margin_bottom = 60.0
align = 1
valign = 1

[node name="Continue" type="Button" parent="Combat/ConfirmBlock"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -60.0
margin_top = -40.0
margin_right = 60.0
margin_bottom = -20.0
text = "Continue"

[node name="Blocker" type="ColorRect" parent="Combat/ConfirmBlock"]
margin_left = -326.0
margin_top = -167.0
margin_right = -148.0
margin_bottom = 140.0
color = Color( 0.392157, 0.392157, 0.392157, 1 )

[node name="UI" parent="." instance=ExtResource( 12 )]

[node name="Pause_Menu" parent="." instance=ExtResource( 10 )]
pause_mode = 2

[node name="Camera" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
script = ExtResource( 6 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
autoplay = true

[connection signal="body_entered" from="Door_5_to_4" to="Door_5_to_4" method="_on_Door_body_entered"]
[connection signal="pressed" from="Combat/Player_Action_Area/Fight1" to="Combat" method="_on_Fight1_pressed"]
[connection signal="pressed" from="Combat/Player_Action_Area/Defend1" to="Combat" method="_on_Defend1_pressed"]
[connection signal="pressed" from="Combat/Player_Action_Area/Item1" to="Combat" method="_on_Item1_pressed"]
[connection signal="pressed" from="Combat/Player_Action_Area/Info1" to="Combat" method="_on_Info1_pressed"]
[connection signal="pressed" from="Combat/Player_Fight_Area/Attack_A" to="Combat" method="_on_Attack_A_pressed"]
[connection signal="pressed" from="Combat/Player_Fight_Area/Attack_B" to="Combat" method="_on_Attack_B_pressed"]
[connection signal="pressed" from="Combat/Player_Fight_Area/Attack_C" to="Combat" method="_on_Attack_C_pressed"]
[connection signal="pressed" from="Combat/Player_Fight_Area/Back" to="Combat" method="_on_Back_pressed"]
[connection signal="pressed" from="Combat/ConfirmBlock/Continue" to="Combat" method="_on_Continue_pressed"]
